# MLOps

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  fraud_transactions.csv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: README.md  bronze_sources.yaml
config/data-quality/expectations/: bronze_fraud_transactions.yaml  gold_fraud_training_data.yaml  silver_fraud_transactions.yaml
config/database/iceberg/: enable_iceberg_evolution.sql  init_iceberg_monitoring.sql  optimize_iceberg_tables.sql
config/database/mysql/: init-evaluation-mysql.sql  init-mysql.sql
config/database/postgres/: init-dagster-postgres.sql
config/monitoring/alertmanager/: alertmanager.yml
config/monitoring/grafana/dashboards/: fraud_operations.json  mlops_comprehensive.json  model_evaluation.json
config/monitoring/grafana/provisioning/: dashboards.yml  prometheus.yml
config/monitoring/prometheus/: alerts.yml  prometheus.yml
config/services/dagster/: dagster.yaml  dagster_webhooks.yaml  workspace.yaml
config/services/litellm/: litellm_config.yaml
config/services/traefik/: traefik.yml
config/services/traefik/dynamic/: routes.yml
config/services/trino/catalog/: iceberg_dev.properties  iceberg_experiment.properties  iceberg_main.properties
config/streaming/debezium/: evaluation-connector.json  mysql-connector.json
config/streaming/ksqldb/: 01_streams.sql  02_aggregations.sql  03_feature_output.sql  init_ksqldb.sh
config/streaming/schemas/: fraud_transaction.avsc
config/webhooks/: lakefs-cvops-webhook-config.yaml  lakefs-webhook-config-multitable.yaml
deploy/docker/: Dockerfile.api  Dockerfile.cv  Dockerfile.cv-consumer  Dockerfile.dagster  Dockerfile.litellm  Dockerfile.mlflow  Dockerfile.streaming-consumer  Dockerfile.webhook  requirements-cv.txt  requirements-webhook.txt
deploy/docker/compose/: .env.example  docker-compose.core.yml  docker-compose.cv.yml  docker-compose.fraud.yml  docker-compose.litellm.yml  docker-compose.monitoring.yml  docker-compose.proxy.yml  docker-compose.tools.yml  docker-compose.yml  fraud_transactions.csv
deploy/helm/fraud-detection/: Chart.yaml  values.yaml
deploy/helm/fraud-detection/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
feast_repo/: feature_store.yaml  generated_features.py
feature_registry/: fraud_detection.yaml  generator.py  lineage.py
notebooks/: 00_codebase_exploration.ipynb  01_bronze_to_silver_FIXED.ipynb  02_gold_feature_exploration.ipynb  03_mlflow_genai_demo.ipynb  =2.10.0
scripts/: auto_accept_cvops_annotations.py  branch_manager.sh  create_cvops_gold_data.py  debug.py  demo_pipeline.sh  demo_schema_evolution.py  demo_schema_registry.py  download_coco_sample.py  fraud_transactions.csv  generate_evaluation_data.py  generate_fraud_data.py  generate_fraud_data_demo.py  monitor_automation.sh  setup_cvops_labelstudio.py  setup_cvops_test_images.py  test_cvops_e2e.py  trigger_dagster_job.py
scripts/utils/: auto_annotate_labelstudio.py
src/: __init__.py
src/api/: __init__.py  ab_testing.py  dependencies.py  errors.py  explainability.py  metrics.py  performance_tracker.py  redis_utils.py  settings.py  shadow_mode.py  streaming_rules.py
src/api/routers/: __init__.py  monitoring.py  prediction.py  streaming.py
src/api/serving/: __init__.py
src/api/serving/features/: __init__.py  feast_client.py  feature_service.py  protocols.py  redis_client.py
src/api/serving/models/: __init__.py  model_loader.py  model_selector.py
src/api/serving/scoring/: __init__.py  adjustments.py  score_pipeline.py
src/api/serving/telemetry/: __init__.py  metrics.py  observer.py  tracker.py
src/core/: __init__.py
src/core/api/: __init__.py  errors.py  models.py
src/core/config/: __init__.py  domain_configs.py  settings.py
src/core/lineage/: __init__.py  mlflow_lineage.py  tracker.py
src/core/monitoring/: __init__.py  metrics.py  mlops_metrics.py
src/core/resources/: __init__.py  connections.py
src/cvops/: __init__.py
src/cvops/api/: __init__.py  main.py
src/cvops/pipelines/: __init__.py  assets.py  checks.py  mlflow_lineage.py  monitoring_utils.py  resources.py  sensors.py
src/cvops/streaming/: __init__.py  ingest_consumer.py
src/llmops/: __init__.py
src/llmops/pipelines/: __init__.py  definitions.py
src/mlops/: __init__.py
src/mlops/api/: __init__.py  main.py
src/mlops/pipelines/: __init__.py  auto_retrain_sensor.py  checks.py  drift_monitoring.py  feature_pipeline.py  feature_transformer.py  iceberg_snapshot_sensor.py  mlflow_lineage.py  mlops.py  mlops_bronze.py  mlops_evaluation.py  mlops_gold.py  mlops_jupyter.py  mlops_labelstudio.py  mlops_maintenance.py  performance_monitoring.py  quality_assets.py  rollback_sync.py  streaming_consumer.py
src/mlops/streaming/: __init__.py  consumer.py
src/pipelines/: __init__.py  hooks.py  labelstudio_config.xml  partitions.py  schedules.py
src/streaming/: __init__.py  evaluation_consumer.py  schema_registry_client.py
src/webhooks/: __init__.py  config.py  main.py  models.py  storage.py
src/webhooks/handlers/: __init__.py  base.py  cvops.py  mlops.py
tests/: conftest.py  test_schema_evolution.py
tests/integration/: __init__.py  conftest.py  test_fraud_api_integration.py  test_redis_integration.py  test_trino_integration.py
tests/unit/: test_fraud_api.py  test_shadow_mode.py
tests/unit/api/: __init__.py
tests/unit/api/serving/: __init__.py  test_adjustments.py  (+1 more)
tests/unit/pipelines/: __init__.py
(+3 files in other folders)
